# sindri

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  ROADMAP.md  requirements.txt  setup.cfg  setup.py
src/sindri/: __init__.py  __main__.py  _version.py  install.py  plot.py  process.py  service.py  start.py  templates.py  utils.py  website.py  websitedata.py
src/sindri/config/: __init__.py  service.py  website.py
src/sindri/mjolnir-website/: mjolnir-website.lektorproject
src/sindri/mjolnir-website/content/: contents.lr  contents.template
src/sindri/utils/: __init__.py  install.py  misc.py
src/sindri/website/: __init__.py  generate.py  preprocess.py  serve.py  templates.py
src/sindri/website/mjolnir-website/: mjolnir-website.lektorproject
src/sindri/website/mjolnir-website/assets/static/css/: custom-styles.css
src/sindri/website/mjolnir-website/content/404.html/: contents.lr
