[metadata]
name = sindri
version = attr: sindri.__version__
description = Process, serve and visualize data from scientific IoT sensors as part of the Mjolnir system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/project-mjolnir/sindri
author = C.A.M. Gerlach/UAH HAMMA group
author_email = CAM.Gerlach@Gerlach.CAM
license = MIT
license_files =
    LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: System :: Monitoring
keywords = iot lightning sensor remote control research m2m server web
project_urls =
    Live Demo = https://hamma.dev/
    Repository = https://github.com/project-mjolnir/sindri
    Documentation = https://github.com/project-mjolnir/sindri#readme
    Changelog = https://github.com/project-mjolnir/sindri/blob/master/CHANGELOG.md
    Issue Tracker = https://github.com/project-mjolnir/sindri/issues

[options]
packages = find:
install_requires =
    brokkr>=0.4
    importlib-metadata>=1
    lektor>=3.2.1,<4
    numpy>=1,<2
    packaging>=17
    pandas>=1,<2
    serviceinstaller>=0.2.0;sys_platform == 'linux'
python_requires = >=3.6
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sindri = sindri.__main__:main
